--- a/style.css
+++ b/style.css
@@ -442,3 +442,32 @@ h3 {
     height: auto; /* Maintains aspect ratio */
     border-radius: 10px; /* Optional: Rounded corners */
 }
+.tool-box-pic {
+    display: block; /* Makes the image a block element for centering */
+    margin-left: auto; /* Centers image horizontally */
+    margin-right: auto; /* Centers image horizontally */
+    max-width: 50%; /* Scales the image down to 40% */
+    height: auto; /* Maintains aspect ratio */
+    border-radius: 10px; /* Optional: Rounded corners */
+}
+
+.notch-pic {
+    display: block; /* Makes the image a block element for centering */
+    margin-left: auto; /* Centers image horizontally */
+    margin-right: auto; /* Centers image horizontally */
+    max-width: 50%; /* Scales the image down to 40% */
+    height: auto; /* Maintains aspect ratio */
+    border-radius: 10px; /* Optional: Rounded corners */
+}
+
+.screw-pic {
+    display: block; /* Makes the image a block element for centering */
+    margin-left: auto; /* Centers image horizontally */
+    margin-right: auto; /* Centers image horizontally */
+    max-width: 50%; /* Scales the image down to 40% */
+    height: auto; /* Maintains aspect ratio */
+    border-radius: 10px; /* Optional: Rounded corners */
+}
+
+
+
