--- a/style.css
+++ b/style.css
@@ -498,3 +498,11 @@ code {
     border-radius: 15px;          /* Round the corners */
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow for depth */
 }
+
+iframe {
+  display: block;
+  margin: 0 auto;
+  border-radius: 15px;          /* Round the corners */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow for depth */
+}
+
